Fixing button and link alignment for mobile and desktop

--- a/assets/stylesheets/form.scss
+++ b/assets/stylesheets/form.scss
@@ -153,14 +153,19 @@ form label.required:after {
 .action {
   margin: 1.5rem 0 0 0;
   input,
-  button {
-    @include media-breakpoint-down(md) {
-      margin: 0 0 1.5rem 0 !important;
-      width: 100%;
-    }
+  button,
+  .btn {
+    margin: 0 0 1.5rem 0;
+    width: 100%;
     @include media-breakpoint-up(md) {
-      margin: 0 1rem 0 0;
+      margin: 0;
+      width: auto;
+    }
+    & + div a,
+    & + label  {
+      @include media-breakpoint-up(md) {
+        margin-left: 1rem;
+      }
     }
   }
 }
-  
